test/domains/sungeun/rect/plus_equals_illegal_2.good
plus_equals_illegal_2.chpl:6: error: Cannot add indices to an arithmetic domain
