test/domains/sungeun/rect/plus_equals_illegal_2.chpl
config const n = 7;

var D1 = {1..n-1};
writeln(D1);

D1 += 1;
writeln(D1);
